--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --accent: linear-gradient(135deg, #a000ff, #ff2d2d);
+      --accent: linear-gradient(135deg, #8e2de2, #ff2d2d);
+      --bg: #ffffff;
       --text: #222;
-      --bg: #fff;
     }
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
       background: var(--bg);
       color: var(--text);
-      overflow-x: hidden;
       scroll-behavior: smooth;
+      transition: background 0.3s, color 0.3s;
     }
+
+    /* HEADER */
     header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 100;
-      background: rgba(255,255,255,0.9);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      backdrop-filter: blur(10px);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px 50px;
+      padding: 15px 60px;
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
     }
     .logo {
-      font-weight: 700;
       font-size: 1.6em;
+      font-weight: 700;
       background: var(--accent);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -49,46 +51,58 @@
     nav a:hover {
       color: #ff2d2d;
     }
+    .header-right {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .btn-small {
+      background: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 6px 14px;
+      cursor: pointer;
+      font-weight: 600;
+    }
 
     /* HERO */
     .hero {
-      position: relative;
       height: 100vh;
-      color: white;
+      background: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      color: white;
+      position: relative;
     }
-    .hero video {
+    .hero::after {
+      content: "";
       position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-      filter: brightness(0.4);
+      inset: 0;
+      background: rgba(0,0,0,0.5);
     }
     .hero-content {
       z-index: 1;
       max-width: 700px;
-      padding: 20px;
       animation: fadeIn 2s ease;
     }
     @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
     }
+
     .btn {
+      display: inline-block;
       background: white;
       color: #e60023;
-      padding: 12px 28px;
+      padding: 12px 25px;
       border-radius: 25px;
       font-weight: 600;
       text-decoration: none;
+      margin-top: 20px;
       transition: 0.3s;
-      display: inline-block;
-      margin-top: 15px;
     }
     .btn:hover {
       background: #eee;
@@ -100,79 +114,70 @@
       text-align: center;
     }
     h2 {
-      font-size: 2.2em;
+      font-size: 2.3em;
       background: var(--accent);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      margin-bottom: 40px;
     }
     .club-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 25px;
-      margin-top: 40px;
     }
     .club {
       background: white;
       padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
       transition: transform 0.3s;
     }
     .club:hover {
       transform: translateY(-5px);
     }
 
-    /* NEWS */
-    .news-form input, .news-form textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+    /* LOGIN & REGISTER */
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
     }
-    .news-item {
+    .modal-content {
       background: white;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-    }
-
-    /* GALLERY */
-    .gallery img {
-      width: 100%;
-      max-width: 280px;
+      padding: 30px;
       border-radius: 12px;
-      margin: 10px;
-      transition: transform 0.3s;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
     }
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    /* FORM */
-    form input, form textarea {
+    .modal-content input {
       width: 100%;
-      padding: 12px;
-      margin: 5px 0 10px;
+      padding: 10px;
+      margin: 8px 0;
       border-radius: 8px;
       border: 1px solid #ccc;
     }
-
-    /* CHAT */
-    .chat-box {
-      max-width: 600px;
-      margin: 40px auto;
-      text-align: left;
-    }
-    .message {
-      background: #f4f4f4;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 10px;
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 2em;
+      color: white;
+      cursor: pointer;
     }
 
-    /* FOOTER */
+    /* SOCIALS */
+    .socials a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #ff2d2d;
+      font-weight: 600;
+    }
+
     footer {
       background: #111;
       color: #ddd;
@@ -181,21 +186,6 @@
       font-size: 0.9em;
     }
 
-    /* BUTTON TO TOP */
-    #toTop {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      padding: 12px 16px;
-      border: none;
-      border-radius: 50%;
-      background: #ff2d2d;
-      color: white;
-      cursor: pointer;
-      display: none;
-    }
-
-    /* DARK MODE */
     .dark-mode {
       --bg: #1c1c1c;
       --text: #f2f2f2;
@@ -203,147 +193,119 @@
   </style>
 </head>
 <body>
-
   <header>
     <div class="logo">🔥 ЭРА</div>
     <nav>
       <a href="#about">О нас</a>
       <a href="#clubs">Клубы</a>
-      <a href="#news">Новости</a>
-      <a href="#events">События</a>
-      <a href="#gallery">Галерея</a>
       <a href="#join">Присоединиться</a>
+      <a href="#contacts">Контакты</a>
     </nav>
-    <button onclick="toggleTheme()" style="border:none;background:none;cursor:pointer;font-weight:700;">🌓</button>
+    <div class="header-right">
+      <button class="btn-small" onclick="openModal('login')">Вход</button>
+      <button class="btn-small" onclick="openModal('register')">Регистрация</button>
+      <button class="btn-small" onclick="toggleTheme()">🌓</button>
+    </div>
   </header>
 
   <section class="hero" id="about">
-    <video autoplay muted loop>
-      <source src="https://cdn.coverr.co/videos/coverr-young-people-having-fun-5174/1080p.mp4" type="video/mp4">
-    </video>
     <div class="hero-content">
-      <h1>Молодёжная организация ЭРА</h1>
-      <p>Мы создаём пространство для креатива, лидерства и общественных инициатив. Присоединяйся — создавай будущее вместе с нами!</p>
-      <a href="#join" class="btn">Вступить в ЭРУ</a>
+      <h1>ЭРА — Молодёжная организация</h1>
+      <p>Объединяем творческих, активных и инициативных! Добро пожаловать в ЭРУ — создаём будущее вместе!</p>
+      <a href="#join" class="btn">Присоединиться</a>
     </div>
   </section>
 
   <section id="clubs">
     <h2>Наши клубы</h2>
     <div class="club-grid">
-      <div class="club"><h3>Культура и Искусство</h3><p>Музыка, театр, живопись — место для творчества.</p></div>
-      <div class="club"><h3>Лидерство</h3><p>Развиваем навыки управления, вдохновения и командной работы.</p></div>
-      <div class="club"><h3>Медиа</h3><p>Фотография, видео, журналистика, SMM.</p></div>
-      <div class="club"><h3>Интерактивный</h3><p>Игры, VR, технологии, геймификация.</p></div>
-      <div class="club"><h3>КВН</h3><p>Юмор, креатив и позитив в каждой встрече.</p></div>
-      <div class="club"><h3>Социальные инициативы</h3><p>Благотворительность, экология, взаимопомощь.</p></div>
-    </div>
-  </section>
-
-  <section id="news">
-    <h2>Новости</h2>
-    <div class="news-form">
-      <input type="text" id="newsTitle" placeholder="Заголовок новости">
-      <textarea id="newsContent" placeholder="Текст новости"></textarea>
-      <button class="btn" onclick="addNews()">Добавить новость</button>
-    </div>
-    <div id="newsList"></div>
-  </section>
-
-  <section id="events">
-    <h2>Ближайшие события</h2>
-    <ul style="list-style:none;padding:0;">
-      <li>📅 15 ноября — Встреча лидеров клубов</li>
-      <li>🎭 20 ноября — Фестиваль творчества "ЭРА Арт"</li>
-      <li>🎮 28 ноября — Турнир интерактивного клуба</li>
-    </ul>
-  </section>
-
-  <section id="gallery">
-    <h2>Галерея</h2>
-    <div class="gallery">
-      <img src="https://source.unsplash.com/300x200/?youth,art" alt="">
-      <img src="https://source.unsplash.com/300x200/?students,team" alt="">
-      <img src="https://source.unsplash.com/300x200/?event" alt="">
-      <img src="https://source.unsplash.com/300x200/?music,festival" alt="">
+      <div class="club"><h3>🎭 Культура и Искусство</h3><p>Проекты, фестивали, выставки.</p></div>
+      <div class="club"><h3>🚀 Лидерство</h3><p>Развивай лидерские качества и навыки коммуникации.</p></div>
+      <div class="club"><h3>📸 Медиа</h3><p>Создавай контент, фото, видео и сторис.</p></div>
+      <div class="club"><h3>🎮 Интерактивный</h3><p>Игры, VR, квизы, технологии.</p></div>
+      <div class="club"><h3>😂 КВН</h3><p>Юмор, сцена и позитивная энергия!</p></div>
+      <div class="club"><h3>💡 Социальные инициативы</h3><p>Благотворительность, экология, помощь людям.</p></div>
     </div>
   </section>
 
   <section id="join">
     <h2>Присоединиться к ЭРЕ</h2>
-    <form onsubmit="join(event)">
-      <input type="text" id="name" placeholder="Имя" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <textarea id="reason" placeholder="Почему хочешь вступить?" required></textarea>
+    <form onsubmit="registerUser(event)">
+      <input type="text" id="joinName" placeholder="Имя" required>
+      <input type="email" id="joinEmail" placeholder="Email" required>
+      <textarea id="joinReason" placeholder="Почему хочешь вступить?" required></textarea>
       <button class="btn">Отправить заявку</button>
     </form>
     <p id="joinMsg"></p>
   </section>
 
-  <section id="chat">
-    <h2>Чат участников</h2>
-    <div class="chat-box" id="chatBox"></div>
-    <input type="text" id="chatInput" placeholder="Напиши сообщение..." style="width:80%;padding:10px;">
-    <button onclick="sendMessage()">💬</button>
-  </section>
-
-  <button id="toTop" onclick="scrollToTop()">⬆</button>
-
-  <footer>
+  <footer id="contacts">
+    <h3>Мы в соцсетях:</h3>
+    <div class="socials">
+      <a href="https://t.me/+Yqy4CfGpVrY1Zjcy" target="_blank">Telegram</a> |
+      <a href="https://www.instagram.com/era_leaders?igsh=MWJicGN6MHFmMTc5dA==" target="_blank">Instagram</a>
+    </div>
     <p>© 2025 ЭРА — Молодёжная организация</p>
   </footer>
 
+  <!-- LOGIN MODAL -->
+  <div class="modal" id="loginModal">
+    <div class="modal-content">
+      <h3>Вход</h3>
+      <input type="text" id="loginUser" placeholder="Логин">
+      <input type="password" id="loginPass" placeholder="Пароль">
+      <button class="btn-small" onclick="login()">Войти</button>
+    </div>
+    <span class="close" onclick="closeModal('login')">&times;</span>
+  </div>
+
+  <!-- REGISTER MODAL -->
+  <div class="modal" id="registerModal">
+    <div class="modal-content">
+      <h3>Регистрация</h3>
+      <input type="text" id="regUser" placeholder="Логин">
+      <input type="password" id="regPass" placeholder="Пароль">
+      <button class="btn-small" onclick="register()">Зарегистрироваться</button>
+    </div>
+    <span class="close" onclick="closeModal('register')">&times;</span>
+  </div>
+
   <script>
-    // NEWS
-    function addNews() {
-      const title = document.getElementById('newsTitle').value;
-      const content = document.getElementById('newsContent').value;
-      if (!title || !content) return alert('Заполни поля!');
-      const list = document.getElementById('newsList');
-      const item = document.createElement('div');
-      item.className = 'news-item';
-      item.innerHTML = `<h3>${title}</h3><p>${content}</p>`;
-      list.prepend(item);
-      document.getElementById('newsTitle').value = '';
-      document.getElementById('newsContent').value = '';
+    function openModal(type) {
+      document.getElementById(type+'Modal').style.display = 'flex';
+    }
+    function closeModal(type) {
+      document.getElementById(type+'Modal').style.display = 'none';
     }
 
-    // JOIN
-    function join(e) {
+    // LOGIN/REGISTER
+    function register() {
+      const user = document.getElementById('regUser').value;
+      const pass = document.getElementById('regPass').value;
+      if(!user || !pass) return alert('Введите логин и пароль!');
+      localStorage.setItem('eraUser_'+user, pass);
+      alert('Регистрация успешна!');
+      closeModal('register');
+    }
+
+    function login() {
+      const user = document.getElementById('loginUser').value;
+      const pass = document.getElementById('loginPass').value;
+      const stored = localStorage.getItem('eraUser_'+user);
+      if(stored && stored === pass) {
+        alert('Добро пожаловать, '+user+'!');
+        closeModal('login');
+      } else {
+        alert('Неверные данные');
+      }
+    }
+
+    function registerUser(e) {
       e.preventDefault();
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const reason = document.getElementById('reason').value;
-      const members = JSON.parse(localStorage.getItem('eraMembers') || '[]');
-      members.push({name, email, reason});
-      localStorage.setItem('eraMembers', JSON.stringify(members));
-      document.getElementById('joinMsg').innerText = 'Спасибо за заявку! Мы скоро свяжемся с тобой.';
+      document.getElementById('joinMsg').innerText = 'Спасибо! Ваша заявка отправлена.';
       e.target.reset();
     }
 
-    // CHAT
-    const chatBox = document.getElementById('chatBox');
-    function sendMessage() {
-      const input = document.getElementById('chatInput');
-      const text = input.value.trim();
-      if (!text) return;
-      const msg = document.createElement('div');
-      msg.className = 'message';
-      msg.textContent = text;
-      chatBox.appendChild(msg);
-      input.value = '';
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    // TO TOP
-    window.onscroll = () => {
-      document.getElementById('toTop').style.display = window.scrollY > 400 ? 'block' : 'none';
-    };
-    function scrollToTop() {
-      window.scrollTo({top: 0, behavior: 'smooth'});
-    }
-
-    // THEME
     function toggleTheme() {
       document.body.classList.toggle('dark-mode');
     }
