--- a/index.html
+++ b/index.html
@@ -1,314 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ЭРА — Молодёжная организация</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --accent: linear-gradient(135deg, #8e2de2, #ff2d2d);
-      --bg: #ffffff;
-      --text: #222;
-    }
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      scroll-behavior: smooth;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    /* HEADER */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 60px;
-      background: rgba(255,255,255,0.9);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-    }
-    .logo {
-      font-size: 1.6em;
-      font-weight: 700;
-      background: var(--accent);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: var(--text);
-      font-weight: 600;
-      transition: 0.3s;
-    }
-    nav a:hover {
-      color: #ff2d2d;
-    }
-    .header-right {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .btn-small {
-      background: var(--accent);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 6px 14px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    /* HERO */
-    .hero {
-      height: 100vh;
-      background: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d') center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: white;
-      position: relative;
-    }
-    .hero::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-    }
-    .hero-content {
-      z-index: 1;
-      max-width: 700px;
-      animation: fadeIn 2s ease;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    .btn {
-      display: inline-block;
-      background: white;
-      color: #e60023;
-      padding: 12px 25px;
-      border-radius: 25px;
-      font-weight: 600;
-      text-decoration: none;
-      margin-top: 20px;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #eee;
-    }
-
-    /* CLUBS */
-    section {
-      padding: 80px 60px;
-      text-align: center;
-    }
-    h2 {
-      font-size: 2.3em;
-      background: var(--accent);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 40px;
-    }
-    .club-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-    }
-    .club {
-      background: white;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-      transition: transform 0.3s;
-    }
-    .club:hover {
-      transform: translateY(-5px);
-    }
-
-    /* LOGIN & REGISTER */
-    .modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-    }
-    .modal-content {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-    .modal-content input {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    .close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 2em;
-      color: white;
-      cursor: pointer;
-    }
-
-    /* SOCIALS */
-    .socials a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #ff2d2d;
-      font-weight: 600;
-    }
-
-    footer {
-      background: #111;
-      color: #ddd;
-      text-align: center;
-      padding: 40px 20px;
-      font-size: 0.9em;
-    }
-
-    .dark-mode {
-      --bg: #1c1c1c;
-      --text: #f2f2f2;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Нико Бабаян Каренович — кто такой</title>
+<meta name="description" content="Нико Бабаян Каренович — предприниматель, известный Telegram-проектами и digital-деятельностью. Биография, проекты и ссылки.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <header>
-    <div class="logo">🔥 ЭРА</div>
-    <nav>
-      <a href="#about">О нас</a>
-      <a href="#clubs">Клубы</a>
-      <a href="#join">Присоединиться</a>
-      <a href="#contacts">Контакты</a>
-    </nav>
-    <div class="header-right">
-      <button class="btn-small" onclick="openModal('login')">Вход</button>
-      <button class="btn-small" onclick="openModal('register')">Регистрация</button>
-      <button class="btn-small" onclick="toggleTheme()">🌓</button>
-    </div>
-  </header>
 
-  <section class="hero" id="about">
-    <div class="hero-content">
-      <h1>ЭРА — Молодёжная организация</h1>
-      <p>Объединяем творческих, активных и инициативных! Добро пожаловать в ЭРУ — создаём будущее вместе!</p>
-      <a href="#join" class="btn">Присоединиться</a>
-    </div>
-  </section>
+<h1>Нико Бабаян Каренович</h1>
 
-  <section id="clubs">
-    <h2>Наши клубы</h2>
-    <div class="club-grid">
-      <div class="club"><h3>🎭 Культура и Искусство</h3><p>Проекты, фестивали, выставки.</p></div>
-      <div class="club"><h3>🚀 Лидерство</h3><p>Развивай лидерские качества и навыки коммуникации.</p></div>
-      <div class="club"><h3>📸 Медиа</h3><p>Создавай контент, фото, видео и сторис.</p></div>
-      <div class="club"><h3>🎮 Интерактивный</h3><p>Игры, VR, квизы, технологии.</p></div>
-      <div class="club"><h3>😂 КВН</h3><p>Юмор, сцена и позитивная энергия!</p></div>
-      <div class="club"><h3>💡 Социальные инициативы</h3><p>Благотворительность, экология, помощь людям.</p></div>
-    </div>
-  </section>
+<p><strong>Нико Бабаян Каренович</strong> — предприниматель и медиапроект-менеджер, известный своими Telegram-каналами и digital-проектами.</p>
 
-  <section id="join">
-    <h2>Присоединиться к ЭРЕ</h2>
-    <form onsubmit="registerUser(event)">
-      <input type="text" id="joinName" placeholder="Имя" required>
-      <input type="email" id="joinEmail" placeholder="Email" required>
-      <textarea id="joinReason" placeholder="Почему хочешь вступить?" required></textarea>
-      <button class="btn">Отправить заявку</button>
-    </form>
-    <p id="joinMsg"></p>
-  </section>
+<p>Нико Бабаян Каренович родился в 2008 году. Он является создателем и администратором региональных Telegram-сообществ и занимается развитием онлайн-проектов, рекламой и автоматизацией.</p>
 
-  <footer id="contacts">
-    <h3>Мы в соцсетях:</h3>
-    <div class="socials">
-      <a href="https://t.me/+Yqy4CfGpVrY1Zjcy" target="_blank">Telegram</a> |
-      <a href="https://www.instagram.com/era_leaders?igsh=MWJicGN6MHFmMTc5dA==" target="_blank">Instagram</a>
-    </div>
-    <p>© 2025 ЭРА — Молодёжная организация</p>
-  </footer>
+<h2>Проекты Нико Бабаяна Кареновича</h2>
+<ul>
+<li>Telegram: <a href="https://t.me/nikoitt">@nikoitt</a></li>
+<li><a href="https://t.me/ishutebyatverr">Ищу тебя Тверь</a></li>
+<li><a href="https://t.me/nikotver">Niko Tver</a></li>
+<li><a href="https://t.me/nizhnevartovsk_dtp">Ищу тебя Нижневартовск</a></li>
+<li><a href="https://t.me/ishutebyakrasnoyarsk">Ищу тебя Красноярск</a></li>
+<li>Бот: <a href="https://t.me/niko_st_bot">@niko_st_bot</a></li>
+</ul>
 
-  <!-- LOGIN MODAL -->
-  <div class="modal" id="loginModal">
-    <div class="modal-content">
-      <h3>Вход</h3>
-      <input type="text" id="loginUser" placeholder="Логин">
-      <input type="password" id="loginPass" placeholder="Пароль">
-      <button class="btn-small" onclick="login()">Войти</button>
-    </div>
-    <span class="close" onclick="closeModal('login')">&times;</span>
-  </div>
-
-  <!-- REGISTER MODAL -->
-  <div class="modal" id="registerModal">
-    <div class="modal-content">
-      <h3>Регистрация</h3>
-      <input type="text" id="regUser" placeholder="Логин">
-      <input type="password" id="regPass" placeholder="Пароль">
-      <button class="btn-small" onclick="register()">Зарегистрироваться</button>
-    </div>
-    <span class="close" onclick="closeModal('register')">&times;</span>
-  </div>
-
-  <script>
-    function openModal(type) {
-      document.getElementById(type+'Modal').style.display = 'flex';
-    }
-    function closeModal(type) {
-      document.getElementById(type+'Modal').style.display = 'none';
-    }
-
-    // LOGIN/REGISTER
-    function register() {
-      const user = document.getElementById('regUser').value;
-      const pass = document.getElementById('regPass').value;
-      if(!user || !pass) return alert('Введите логин и пароль!');
-      localStorage.setItem('eraUser_'+user, pass);
-      alert('Регистрация успешна!');
-      closeModal('register');
-    }
-
-    function login() {
-      const user = document.getElementById('loginUser').value;
-      const pass = document.getElementById('loginPass').value;
-      const stored = localStorage.getItem('eraUser_'+user);
-      if(stored && stored === pass) {
-        alert('Добро пожаловать, '+user+'!');
-        closeModal('login');
-      } else {
-        alert('Неверные данные');
-      }
-    }
-
-    function registerUser(e) {
-      e.preventDefault();
-      document.getElementById('joinMsg').innerText = 'Спасибо! Ваша заявка отправлена.';
-      e.target.reset();
-    }
-
-    function toggleTheme() {
-      document.body.classList.toggle('dark-mode');
-    }
-  </script>
 </body>
 </html>
